src/test/resources/acceptance/accept/validFunctionCallWithParams.ul
void bar ()
{
    bar(id1, id2);
    bar (id1, 5,id3);
    bar
    ( id1 ) ;
    bar
    (
    id1
    ,
    id2 ,
    id3
    );
}
