src/test/resources/reject/comparisonTooFewEquals.ul
int foo ()
{
    5 = 5;
}
